# ncpoleon

./: .coderabbit.yaml  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: buffer_to_main.yml  checks.yml  codspeed.yml  distribute.yml  main_to_buffer.yml  tests-mosek-and-coverage.yml  tests-mosek.yml  tests.yml
docs/: understanding_the_relaxation_output.md
python/ncpoleon/: __init__.py  __init__.pyi  _typing.py  utils.py
python/ncpoleon/export/: to_mosek.py  to_picos.py
python/ncpoleon/polynomials/: __init__.pyi
python/ncpoleon/polynomials/commutative_polynomials/: __init__.py  __init__.pyi
python/ncpoleon/polynomials/noncommutative_polynomials/: __init__.py  __init__.pyi
python/ncpoleon/relaxations/: __init__.py  __init__.pyi
python/ncpoleon/solve/: __init__.py  mosek_solution.py  picos_solution.py  solution.py  solve.py  sos_decomposition.py  utils.py
python/tests/: test_benchmark_max_cut.py  test_chsh_uniform.py  test_guessing_probability_chsh.py  test_i3322.py  test_multiple_moment_matrices.py  test_simple_commutative_problem.py  test_simple_noncommutative_problem.py  utils.py
src/polynomials/: mod.rs  polynomial.rs
src/polynomials/commutative_polynomials/monomials/: commutative_monomial.rs
src/polynomials/commutative_polynomials/operators/: commutative_operator.rs
src/polynomials/commutative_polynomials/polynomials/: commutative_polynomial.rs
src/polynomials/noncommutative_polynomials/polynomials/: noncommutative_polynomial.rs
src/relaxations/: moment_matrix.rs  sdp_relaxation.rs
stubs/picos/: __init__.pyi
