[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ncpoleon"
description = "A performance-focused Python library for solving polynomial optimization problems over (non)commutative variables through SDP relaxations."
license = "GPL-3.0"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Peter Brown", email = "peter.brown@telecom-paris.fr" },
    { name = "Tristan Nemoz", email = "tristan.nemoz@gmail.com" },
]
keywords = [
    "polynomial optimization",
    "commutative polynomial optimization",
    "non-commutative polynomial optimization",
    "sdp",
    "semidefinite programming",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["numpy>=2.3.0", "scipy>=1.17.1"]

[project.urls]
Homepage = "https://github.com/ncpoleon/ncpoleon/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[project.optional-dependencies]
mosek = ["mosek>=11.2.0"]
picos = ["picos>=2.6.2", "scipy>=1.17.1"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mosek>=11.2.0",
    "picos>=2.6.2",
    "pytest>=9.0.3",
    "pytest-codspeed>=5.0.3",
    "scipy-stubs>=1.17.1.5",
    "ty>=0.0.40",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "ncpoleon._accelerate"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "FA100",
    "NPY",
    "UP006",
    "UP007",
    "UP010",
    "UP035",
    "UP036",
    "UP037",
    "UP045",
    "W",
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["stubs"]

[tool.ty.src]
include = ["python"]
exclude = ["python/tests"]

[tool.pytest]
console_output_style = "progress"
strict_config = true
strict_markers = true
strict_parametrization_ids = true
testpaths = ["python/tests"]
markers = [
    "walltime: marks tests as benchmarkable using walltime mode (deselect with '-m \"not walltime\"')",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/Cargo.toml" },
    { file = "**/*.rs" },
]
